[package]
name = "actix-htmx"
version = "0.1.0"
authors = ["Dave Lewis <dave@dllewis.org"]
description = "Actix-web middleware for use when developing with htmx"
readme = "README.md"
keywords = ["actix-web", "middleware", "htmx"]
license = "MIT OR Apache-2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
actix-web = { version = "4", default-features = false }
futures-util = "0.3"
indexmap = "2"
log = "0.4"
regex = "1"

[dev-dependencies]
actix-web = { version = "4", default-features = false, features = ["macros"] }
