[package]
name = "example-todo"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
actix-files = "0.6"
actix-htmx = { path = "../../actix-htmx" }
actix-web = { version = "4", default-features = false, features = ["macros"] }
askama = "0.12"
anyhow = "1"

[build-dependencies]
askama = "0.12"