[package]
name = "example-todo"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "example-todo"

[dependencies]
actix-files = "0.6"
actix-htmx = { path = "../../actix-htmx" }
actix-web = { version = "4", default-features = false, features = [ "macros" ] }
askama = { version = "0.14" }
anyhow = "1"
sqlx = { version = "0.8", default-features = false, features = [ "runtime-tokio-rustls", "macros", "sqlite", "uuid", "chrono", "migrate"] }
uuid = { version = "1.17", features = [ "v4", "fast-rng", "macro-diagnostics", "serde" ] }
serde = { version = "1.0", features = [ "derive" ] }
